[gd_scene format=3 uid="uid://o2oy1rvwobsh"]

[ext_resource type="Script" uid="uid://drftmrt3lasq0" path="res://scenes/main scenes/run.gd" id="1_e7k3u"]
[ext_resource type="Script" uid="uid://cinu2hdebvevd" path="res://scripts/StateMachine.gd" id="4_kj6k4"]
[ext_resource type="Script" uid="uid://c77ooj0w5nd" path="res://scripts/States/CombatState.gd" id="4_tqy7d"]
[ext_resource type="Script" uid="uid://cm6m2gxhv076j" path="res://scripts/States/ShopState.gd" id="5_kj6k4"]
[ext_resource type="Script" uid="uid://bq1neyovm73vq" path="res://scripts/States/EventState.gd" id="6_vpwr2"]
[ext_resource type="Script" uid="uid://c6pkihqpaueax" path="res://scripts/States/LevelUpState.gd" id="7_1crx1"]
[ext_resource type="Script" uid="uid://b86ovwwhqlkcf" path="res://scripts/States/SpecialShopState.gd" id="9_vpwr2"]
[ext_resource type="Script" uid="uid://bxydft84qy3h2" path="res://scripts/States/ChooseFightState.gd" id="10_1crx1"]
[ext_resource type="PackedScene" uid="uid://cokl4xcoeufdp" path="res://scenes/reusables/reaction_panel.tscn" id="10_prr82"]
[ext_resource type="Script" uid="uid://dkic5dc64l36y" path="res://scripts/States/CurrentRewardState.gd" id="11_1cp5a"]
[ext_resource type="Script" uid="uid://7f7tg7lmhjlt" path="res://scenes/main scenes/skills_manager.gd" id="12_mm7un"]
[ext_resource type="Script" uid="uid://uwucmrhjdo26" path="res://scenes/main scenes/UIManager.gd" id="13_84fnp"]
[ext_resource type="Script" uid="uid://d4m2rer4xpdld" path="res://scenes/main scenes/scene_manager.gd" id="14_yw6xj"]
[ext_resource type="PackedScene" uid="uid://d086qw0hvodmm" path="res://scenes/reusables/universal_info_manager.tscn" id="15_84fnp"]

[sub_resource type="LabelSettings" id="LabelSettings_dcmsy"]
font_size = 291
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vpwr2"]
font_size = 46
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1crx1"]
font_size = 36
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84fnp"]
bg_color = Color(0.1897483, 0.1897483, 0.1897483, 0.85700005)

[node name="Run" type="Node" unique_id=1362492498 groups=["run"]]
script = ExtResource("1_e7k3u")

[node name="Ally 1 Spot" type="Node2D" parent="." unique_id=1661384751]
unique_name_in_owner = true
z_index = 3
position = Vector2(94, 306)

[node name="Ally 2 Spot" type="Node2D" parent="." unique_id=1574092334]
unique_name_in_owner = true
z_index = 3
position = Vector2(329, 306)

[node name="Ally 3 Spot" type="Node2D" parent="." unique_id=1439751725]
unique_name_in_owner = true
z_index = 3
position = Vector2(564, 306)

[node name="Ally 4 Spot" type="Node2D" parent="." unique_id=1890562475]
unique_name_in_owner = true
z_index = 3
position = Vector2(799, 306)

[node name="KeystoneHandlerSpot" type="Node2D" parent="." unique_id=1793237023]
z_index = 3
position = Vector2(960, 33.905)
scale = Vector2(0.86, 0.86)

[node name="ReactionGuide" type="Button" parent="." unique_id=387121775]
z_index = 3
z_as_relative = false
offset_left = 1423.0
offset_top = 991.0
offset_right = 1896.0
offset_bottom = 1062.0
theme_override_font_sizes/font_size = 48
text = "Open Reaction Guide"

[node name="ReactionPanel" parent="ReactionGuide" unique_id=508350429 instance=ExtResource("10_prr82")]
visible = false
z_index = 3
layout_mode = 1
offset_left = -1260.0
offset_top = -952.125
offset_right = -1260.0
offset_bottom = -952.125
scale = Vector2(0.9, 0.9)

[node name="Loading" type="Node2D" parent="." unique_id=1245045640]
visible = false

[node name="Label" type="Label" parent="Loading" unique_id=765433425]
z_index = 11
offset_left = 11.0
offset_top = 393.0
offset_right = 1924.0
offset_bottom = 649.0
text = "Loading...
"
label_settings = SubResource("LabelSettings_dcmsy")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Loading" unique_id=1570268617]
z_index = 10
offset_left = -18.0
offset_right = 1953.0
offset_bottom = 1091.0
mouse_filter = 2
color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="StateMachine" type="Node" parent="." unique_id=1194128707]
script = ExtResource("4_kj6k4")

[node name="Combat" type="Node" parent="StateMachine" unique_id=2099351188]
script = ExtResource("4_tqy7d")
metadata/_custom_type_script = "uid://c77ooj0w5nd"

[node name="Shop" type="Node" parent="StateMachine" unique_id=714253987]
script = ExtResource("5_kj6k4")
metadata/_custom_type_script = "uid://cm6m2gxhv076j"

[node name="Event" type="Node" parent="StateMachine" unique_id=193383393]
script = ExtResource("6_vpwr2")
metadata/_custom_type_script = "uid://bq1neyovm73vq"

[node name="LevelUp" type="Node" parent="StateMachine" unique_id=806737984]
script = ExtResource("7_1crx1")
metadata/_custom_type_script = "uid://c6pkihqpaueax"

[node name="SpecialShop" type="Node" parent="StateMachine" unique_id=1440221728]
script = ExtResource("9_vpwr2")
metadata/_custom_type_script = "uid://b86ovwwhqlkcf"

[node name="ChooseFight" type="Node" parent="StateMachine" unique_id=1601966261]
script = ExtResource("10_1crx1")
metadata/_custom_type_script = "uid://bxydft84qy3h2"

[node name="ChooseReward" type="Node" parent="StateMachine" unique_id=1705088465]
script = ExtResource("11_1cp5a")
metadata/_custom_type_script = "uid://dkic5dc64l36y"

[node name="GoldText" type="RichTextLabel" parent="." unique_id=352629663]
z_index = 3
offset_left = 1515.0
offset_top = 14.0
offset_right = 1673.0
offset_bottom = 58.0
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = " [color=yellow]Gold[/color] : 0"

[node name="XPBar" type="ProgressBar" parent="." unique_id=429155734]
z_index = 3
offset_left = 1719.0
offset_top = 9.999998
offset_right = 2051.0
offset_bottom = 43.0
scale = Vector2(0.565, 0.565)
show_percentage = false

[node name="CurrentLevel" type="Label" parent="XPBar" unique_id=1170490893]
layout_mode = 0
offset_left = -6.0
offset_top = 37.0
offset_right = 20.0
offset_bottom = 78.0
text = "0"
label_settings = SubResource("LabelSettings_vpwr2")

[node name="NextLevel" type="Label" parent="XPBar" unique_id=1590370564]
layout_mode = 0
offset_left = 314.0
offset_top = 37.0
offset_right = 340.0
offset_bottom = 94.0
text = "1"
label_settings = SubResource("LabelSettings_vpwr2")

[node name="XPNumber" type="Label" parent="XPBar" unique_id=2117894468]
layout_mode = 0
offset_left = 70.0
offset_top = 37.0
offset_right = 277.0
offset_bottom = 81.0
text = "0 / 100 XP"
label_settings = SubResource("LabelSettings_1crx1")
horizontal_alignment = 1

[node name="XPGainPosition" type="Node2D" parent="XPBar" unique_id=1009331668]
position = Vector2(-103, 25)

[node name="SkillsManager" type="Node" parent="." unique_id=2091321960]
script = ExtResource("12_mm7un")

[node name="UIManager" type="Node" parent="." unique_id=1981488917]
script = ExtResource("13_84fnp")

[node name="SceneManager" type="Node" parent="." unique_id=1967956949]
script = ExtResource("14_yw6xj")

[node name="TopBar" type="PanelContainer" parent="." unique_id=819270118]
offset_right = 1922.0
offset_bottom = 70.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_84fnp")

[node name="UniversalInfoManager" parent="." unique_id=78698777 instance=ExtResource("15_84fnp")]
offset_left = 19.0
offset_top = 85.0
offset_right = -1901.0
offset_bottom = -981.0
scale = Vector2(1.25, 1.25)
mouse_filter = 2

[connection signal="pressed" from="ReactionGuide" to="." method="_on_reaction_guide_pressed"]
[connection signal="pressed" from="ReactionGuide" to="UIManager" method="_on_reaction_guide_pressed"]
[connection signal="reaction_guide_button_pressed" from="UIManager" to="." method="_on_ui_manager_reaction_guide_button_pressed"]
